--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@ body {
   position: absolute;
   width: 50px;
   height: 50px;
-  background-color: red;
+  background-color: pink;
   border-radius: 50%;
   cursor: pointer;
 }
